noinst_LTLIBRARIES = libdescriptors.la

parsers = \
    parser_0x02.c \
    parser_0x03.c \
    parser_0x04.c \
    parser_0x05.c \
    parser_0x06.c \
    parser_0x07.c \
    parser_0x08.c \
    parser_0x09.c \
    parser_0x0a.c \
    parser_0x0b.c \
    parser_0x0c.c \
    parser_0x0d.c \
    parser_0x0e.c \
    parser_0x0f.c \
    parser_0x10.c \
    parser_0x11.c \
    parser_0x12.c \
    parser_0x13.c \
    parser_0x14.c \
    parser_0x15.c \
    parser_0x1b.c \
    parser_0x1c.c \
    parser_0x1d.c \
    parser_0x1e.c \
    parser_0x1f.c \
    parser_0x20.c \
    parser_0x21.c \
    parser_0x22.c \
    parser_0x23.c \
    parser_0x28.c \
    parser_0x2a.c \
    parser_0x40.c \
    parser_0x41.c \
    parser_0x42.c \
    parser_0x47.c \
    parser_0x48.c \
    parser_0x49.c \
    parser_0x4a.c \
    parser_0x4b.c \
    parser_0x4c.c \
    parser_0x4d.c \
    parser_0x4e.c \
    parser_0x4f.c \
    parser_0x50.c \
    parser_0x51.c \
    parser_0x52.c \
    parser_0x53.c \
    parser_0x54.c \
    parser_0x55.c \
    parser_0x58.c \
    parser_0x63.c \
    parser_0x7c.c \
    parser_0xc0.c \
    parser_0xc1.c \
    parser_0xc2.c \
    parser_0xc3.c \
    parser_0xc4.c \
    parser_0xc5.c \
    parser_0xc6.c \
    parser_0xc7.c \
    parser_0xc8.c \
    parser_0xc9.c \
    parser_0xca.c \
    parser_0xcb.c \
    parser_0xcc.c \
    parser_0xcd.c \
    parser_0xce.c \
    parser_0xcf.c \
    parser_0xd0.c \
    parser_0xd1.c \
    parser_0xd2.c \
    parser_0xd3.c \
    parser_0xd4.c \
    parser_0xd5.c \
    parser_0xd6.c \
    parser_0xd7.c \
    parser_0xd8.c \
    parser_0xd9.c \
    parser_0xda.c \
    parser_0xdb.c \
    parser_0xdc.c \
    parser_0xdd.c \
    parser_0xde.c \
    parser_0xe0.c \
    parser_0xf7.c \
    parser_0xf8.c \
    parser_0xfa.c \
    parser_0xfb.c \
    parser_0xfc.c \
    parser_0xfd.c \
    parser_0xfe.c \
    parser_0xff.c

libdescriptors_la_SOURCES  = descriptors.c $(parsers)
libdescriptors_la_SOURCES += descriptors.h

AM_CPPFLAGS = -I. -I.. -I../backends
